--- a/template.html
+++ b/template.html
@@ -16,6 +16,10 @@
         margin-top: 105px;
         margin-left: 260px;
     }
+
+    .layersDiv label {
+        color: white;
+    }
 </style>
 
 <div class="row">
@@ -66,9 +70,9 @@
 
   </div>
 </div>
-<script src="http://www.openlayers.org/api/OpenLayers.js"></script>
+<script src="http://www.openlayers.org/dev/OpenLayers.js"></script>
 <script src="http://maps.google.com/maps/api/js?v=3.6&amp;sensor=false"></script>
-<script src="https://raw.github.com/aino/throbber.js/master/throbber.js"></script>
+<script src="/static/js/throbber/throbber.js"></script>
 <script src="/static/js/pybossa/pybossa.js" type="text/javascript"></script>
 <!-- PyBossa interface -->
 <script>
