--- a/template.html
+++ b/template.html
@@ -70,7 +70,7 @@
 
   </div>
 </div>
-<script src="http://www.openlayers.org/dev/OpenLayers.js"></script>
+<script src="http://www.openlayers.org/api/OpenLayers.js"></script>
 <script src="http://maps.google.com/maps/api/js?v=3.6&amp;sensor=false"></script>
 <script src="/static/js/throbber/throbber.js"></script>
 <script src="/static/js/pybossa/pybossa.js" type="text/javascript"></script>
