--- a/template.html
+++ b/template.html
@@ -30,8 +30,12 @@
       <a class="close">×</a>
       <strong>Well done!</strong> Your answer has been saved</strong>
     </div>
+    <div id="taskcompleted" class="alert alert-info" style="display:none;">
+      <strong>The task has been completed!</strong> Thanks a lot!</strong>
+    </div>
+
     <div id="finish" class="alert alert-success" style="display:none;">
-      <strong>Congratulations!</strong> All the tasks have been completed!</strong>
+      <strong>Congratulations!</strong> You have participated in all available tasks!</strong>
       <br/>
       <div class="alert-actions">
               <a class="btn small" href="/">Go back</a>
@@ -79,6 +83,24 @@
 
   </div>
 </div>
+<div class="row skeleton">
+<div id="disqus_thread" class="span11 offset1"></div>
+</div>
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    var disqus_shortname = 'pybossa'; // required: replace example with your forum shortname
+    var disqus_developer = 1;
+
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+
 <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
 <script src="http://maps.google.com/maps/api/js?v=3.6&amp;sensor=false"></script>
 <script src="/static/js/throbber/throbber.js"></script>
@@ -323,12 +345,68 @@ function loadData (data) {
     }
 }
 
+// Load the task data into the HTML skeleton
+function loadTask (task_id) {
+    var t = $.ajax({
+        url: '/api/task/'+task_id,
+        dataType: 'json'
+    });
+
+    t.done( function (task) {
+        if ( !$.isEmptyObject(task) ) {
+            spinnerStart();
+            if (task.state=='completed') {
+                $('#controls').hide();
+                $('#answer').hide();
+                $('#disqus_thread').hide();
+                $('#taskcompleted').show();
+            }
+
+            addCity(task.info.city);
+            $("#question h1").text(task.info.question);
+            $("#question h3").text(task.info.city);
+            $("#task-id").text(task.id);
+            spinnerStop();
+
+            addCity(task.info.city);
+        }
+        else {
+            $(".skeleton").hide();
+            $("#finish").fadeIn();
+        }
+    });
+}
+
+
+pathArray = window.location.pathname.split('/');
+if (window.location.pathname.indexOf('/task/')!=-1) {
+    var l = pathArray.length;
+    var i = 0;
+    for (i=0;i<l;i++) {
+        if (pathArray[i]=='task') {
+            loadTask(pathArray[i+1]);
+        }
+    }
+}
+else {
+    pybossa.newTask("urbanpark").done( function( data ) { 
+
+        if ( !$.isEmptyObject(data.task) ) {
+            window.location.pathname = "/app/urbanpark/task/" + data.task.id;
+        }
+       else {
+            $(".skeleton").hide();
+            $("#finish").fadeIn();
+        }
+    });
+}
+
 // Uses the new API method to get a proper task to be shown!
-pybossa.newTask('urbanpark').done(function(data) { 
-    //console.log(data);
-    //addCity(data.task.city);
-    loadData(data);
-});
+//pybossa.newTask('urbanpark').done(function(data) { 
+//    //console.log(data);
+//    //addCity(data.task.city);
+//    loadData(data);
+//});
 
 // Saves the answer for the given task
 function submitTask() {
@@ -357,7 +435,8 @@ function submitTask() {
         // Fade out the pop-up after a 2000 miliseconds
         setTimeout(function() { $("#success").fadeOut() }, 2000);
         // Request a new task
-        pybossa.newTask('urbanpark').done( function(data) { loadData(data) });
+        //pybossa.newTask('urbanpark').done( function(data) { loadData(data) });
+        window.location.pathname = "/app/urbanpark/newtask";
     });
 }
 </script>
