Better UI for the application.

--- a/template.html
+++ b/template.html
@@ -56,7 +56,7 @@
     <div id="question">
       <h1>Question</h1>
       <h3 id="city">City</h3>
-      <p>Use the black toolbar (below the map) to add  a new marker to <i class="icon-map-marker"></i> to set the urban park position.</p> 
+      <p>Use the black toolbar (below the map) to add  a new marker to set the urban park position.</p> 
       <p>Task: <span id="task-id" class="label label-warning">#</span></p>
       <div id="map_canvas" style="width: 620px; height: 310px;">
           <div id="throbber"></div>
@@ -66,12 +66,12 @@
           <strong>Latitude:</strong> <span id="lat"></span>
       </div>
       <br/>
-      <div id="controls" class="btn-group" data-toggle="buttons-checkbox" style="text-align:center">
+      <div id="controls" class="btn-group" data-toggle="buttons-checkbox">
           <button id="navigate" class="btn btn-inverse active" onClick="toggleControl('navigate');">
               <i class="icon icon-white icon-move"></i> Navigate
           </button>
           <button id="point"    class="btn btn-inverse" onClick="toggleControl('point');">
-              <i class="icon icon-white icon-map-marker"></i> Marker
+              <i class="icon icon-white icon-map-marker"></i> Urban Park Marker 
           </button>
       </div>
       <br/>
