--- a/long_description.html
+++ b/long_description.html
@@ -1,7 +1,7 @@
 <div class="row">
-    <div class="span12">
+    <div class="span8">
         <p>
-        Urban Parks is a demo application for PyBossa that shows how you can 
+        Urban Parks is a <strong>demo application</strong> for PyBossa that shows how you can 
         crowdsourcing a geo localization problem.
         </p>
         <p>
@@ -11,6 +11,11 @@
         <p>
         When the user finds one park, adds one marker to indicate the position and
         saves the coordinates in GeoJSON format to easily parse it at a later stage.
+        </p>
+        <p>
+        If your browser and your computer support <strong>WebGL</strong>, you can view the answers from the users in this 3D world globe. Click in the image to open it!</p>
+        <p>
+        <a target="blank" href="http://teleyinex.github.com/pybossa-urbanpark-globe/"><img src="https://pbs.twimg.com/media/AxxDoY9CIAET_0L.png"></a>
         </p>
         <p>
         <span class="label label-warning">
@@ -24,5 +29,8 @@
              <li><a href="http://docs.pybossa.com/en/latest/user/create-application-tutorial.html">the step by step tutorial.</a></li>
          </ul>
         </p>
+    </div>
+    <div class="span4">
+        <a href="./urbanpark/newtask" class="btn btn-large btn-primary"><i class="icon-thumbs-up"></i> Start Contributing!</a> 
     </div>
 </div>
