--- a/long_description.html
+++ b/long_description.html
@@ -31,6 +31,6 @@
         </p>
     </div>
     <div class="span4">
-        <a href="./urbanpark/newtask" class="btn btn-large btn-primary"><i class="icon-thumbs-up"></i> Start Contributing!</a> 
+        <a href="./urbanpark/newtask" class="btn btn-large btn-primary"><i class="icon-thumbs-up"></i> Try the demo!</a> 
     </div>
 </div>
