Include Google Spreadsheet Task Template

--- a/long_description.html
+++ b/long_description.html
@@ -3,8 +3,8 @@
         position:relative !important;
     }
 </style>
-<div class="row">
-    <div class="span8">
+<div class="row-fluid">
+    <div class="span12">
         <p>
         Urban Parks is a <strong>demo application</strong> for PyBossa that shows how you can 
         crowdsourcing a geo localization problem.
@@ -18,12 +18,9 @@
         saves the coordinates in GeoJSON format to easily parse it at a later stage.
         </p>
     </div>
-    <div class="span4">
-        <a href="./urbanpark/newtask" class="btn btn-large btn-primary"><i class="icon-thumbs-up"></i> Try the demo!</a> 
-    </div>
 </div>
-<div class="row">
-    <div class="span8">
+<div class="row-fluid">
+    <div class="span12">
         <h2>Results <small>urban parks reported by the volunteers in a 3D globe</small></h2>
         <p>This 3D Globe uses the HTML5 WebGL technology for showing the results, each blue pike represents and urban park submitted by a volunteer, almost in realtime from this <strong>demo application</strong>.</p>
         <p>You can rotate the globe by clicking on it and dragging it!</p>
@@ -540,9 +537,10 @@
          check the:
          <ul>
              <li><a href="http://github.com/PyBossa/app-geocoding">source code</a>,</li>
+             <li><a href="https://docs.google.com/spreadsheet/ccc?key=0AsNlt0WgPAHwdGZnbjdwcnhKRVNlN1dGXy0tTnNWWXc&usp=sharing">Google Spreadsheet Task template</a>,</li>
              <li><a href="http://app-geocoding.readthedocs.org/en/latest/index.html"> specific documentation,</a></li>
              <li><a href="http://docs.pybossa.com/">the official documentation of PyBossa</a> and </li>
-             <li><a href="http://docs.pybossa.com/en/latest/user/create-application-tutorial.html">the step by step tutorial.</a></li>
+             <li><a href="http://docs.pybossa.com/en/latest/user/tutorial.html">the step by step tutorial.</a></li>
          </ul>
         </p>
     </div>
