Github Buttons added

--- a/long_description.html
+++ b/long_description.html
@@ -543,5 +543,11 @@
              <li><a href="http://docs.pybossa.com/en/latest/user/tutorial.html">the step by step tutorial.</a></li>
          </ul>
         </p>
+        <hr>
+        <hr>
+        <iframe src="http://ghbtns.com/github-btn.html?user=PyBossa&repo=app-geocoding&type=watch&count=true&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
+
+        <iframe src="http://ghbtns.com/github-btn.html?user=PyBossa&repo=app-geocoding&type=fork&count=true&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
+
     </div>
 </div>
