--- a/tutorial_bootstrap2.html
+++ b/tutorial_bootstrap2.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-12">
+    <div class="span12">
         <div id="modal" class="modal hide fade">
             <div class="modal-header">
                 <h3>Urban Parks tutorial</h3>
