Use FontAwesome icons

--- a/template.html
+++ b/template.html
@@ -58,18 +58,18 @@
       <h1>Question</h1>
       <h3 id="city">City</h3>
       <button id="point" class="btn btn-inverse">
-          <i class="icon icon-white icon-map-marker"></i> Add an Urban Park Marker 
+          <i class="fa fa-map-marker"></i> Add an Urban Park Marker 
       </button>
       <button id="noPark" class="btn btn-submit">I do not see an urban park</button>
       <button id="noCity" class="btn btn-submit" style="display:none;">City not found!</button>
 
       <p>Task: <span id="task-id" class="label label-warning">#</span></p>
       <div id="map"></div>
-      <i class="icon-map-marker"></i> Urban park position: <strong> Longitude:</strong> <span id="lon"></span>, 
+      <i class="fa fa-map-marker"></i> Urban park position: <strong> Longitude:</strong> <span id="lon"></span>, 
       <strong>Latitude:</strong> <span id="lat"></span>
     </div>
     <div id="answer">
-        <button id="answerbtn" class="btn btn-success btn-submit"><i class="icon-check icon-white"></i> Save these coordinates for the urban park</button>
+        <button id="answerbtn" class="btn btn-success btn-submit"><i class="fa fa-check"></i> Save these coordinates for the urban park</button>
     </div>
   </div>
 </div>
