Changed application for project

--- a/template.html
+++ b/template.html
@@ -33,7 +33,7 @@
             <br/>
             <div class="alert-actions">
                 <a class="btn small" href="/">Go back</a>
-                <a class="btn small" href="/app">or, Check other applications</a>
+                <a class="btn small" href="/app">or, Check other projects</a>
             </div>
         </div>
         <!-- Error alert box -->
@@ -46,7 +46,7 @@
             <a class="close">×</a>
             <p><strong>Sorry!</strong> Your web browser does not support the application.<p>
             <div class="alert-actions">
-<a c    lass="btn small" href="/app">Please, try with another application</a>
+                <a class="btn small" href="/app">Please, try with another project</a>
             </div>
         </div>
     </div><!-- End of span8 col-md-offset-2-->
