--- a/tutorial.html
+++ b/tutorial.html
@@ -5,7 +5,7 @@
                 <h3>Urban Parks tutorial</h3>
             </div>
             <div id="0" class="modal-body" style="display:none">
-                <p><strong>Hi!</strong> This is a <strong>demo application</strong> that shows how you can do geo-coding problems with web mapping tools using the PyBossa framework in Crowdcrafting.org.
+                <p><strong>Hi!</strong> This is a <strong>demo project</strong> that shows how you can do geo-coding problems with web mapping tools using the PyBossa framework in Crowdcrafting.org.
                </p> 
             </div>
             <div id="1" class="modal-body" style="display:none">
