--- a/template.html
+++ b/template.html
@@ -14,7 +14,7 @@
 </style>
 <div class="row">
     <!-- Success and Error Messages for the user --> 
-    <div class="col-md-8 col-md-offset-2" style="height:50px">
+    <div class="col-md-12" style="height:50px">
         <!-- Success alert box -->
         <div id="success" class="alert alert-success" style="display:none;">
             <a class="close">×</a><strong>Well done!</strong> Your answer has been saved
@@ -53,7 +53,7 @@
 </div><!-- End of Row-->
 
 <div class="row">
-  <div class="skeleton col-md-11 col-md-offset-1">
+  <div class="skeleton col-md-12">
     <div id="question">
       <h1>Question</h1>
       <h3 id="city">City</h3>
@@ -75,7 +75,7 @@
 </div>
 
 <div class="row skeleton">
-    <div id="disqus_thread" class="col-md-11 col-md-offset-1"></div>
+    <div id="disqus_thread" class="col-md-12"></div>
 </div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
