Remove fixed size.

--- a/template.html
+++ b/template.html
@@ -64,7 +64,7 @@
       <button id="noCity" class="btn btn-default btn-submit" style="display:none;">City not found!</button>
 
       <p>Task: <span id="task-id" class="label label-warning">#</span></p>
-      <div id="map" style="width:512px; height:257px;"></div>
+      <div id="map"></div>
       <i class="fa fa-map-marker"></i> Urban park position: <strong> Longitude:</strong> <span id="lon"></span>, 
       <strong>Latitude:</strong> <span id="lat"></span>
     </div>
